@@ -2,8 +2,8 @@ TODO list:
 ----------
  * seems File::readline() does not return 1 when line contains only '\n' char. Should return ?
  * error checks during stream read/write in File (ferror)
- * add File::read()
  * correct File::write(const char* w, int s) -> File::write(const char* w)
+ * add File::printf()
  * in Config, don't allow [] sections
  * add convinient Time class
  * maybe better SharedLibraryFromObjects in Jamrules
