@@ -35,15 +35,47 @@ void EFatal(const char* fmt, ...);
 
 EDELIB_NAMESPACE {
 
+/*!\addtogroup Functions
+ * @{ */
 enum MsgType
 {
-	MsgDebug = 0,
-	MsgWarn,
-	MsgFatal
+	MsgDebug = 0,         ///< debug messages
+	MsgWarn,              ///< warnings
+	MsgFatal              ///< failed assertions and EFatal calls
 };
 
+/** Handler type for error messages */
 typedef void (*MsgHandlerType)(MsgType t, const char* msg);
+/** 
+ * Installs handler for error messages.
+ *
+ * This function is used to redirect all
+ * messages to users defined function. User later
+ * can do what is apropriate. This is sample
+ * of usage:
+ * \code
+ *   MsgHandlerType myfunc;
+ *   void myfunc(MsgType type, const char* msg)
+ *   {
+ *      switch(type)
+ *      {
+ *         // debug messages
+ *         case MsgDebug:
+ *            // do something
+ *         break;
+ *         // warrnings
+ *         case MsgWarn:
+ *            // do something
+ *         break;
+ *         // fatals and assertions (abort() is advised)
+ *         case MsgFatal:
+ *            abort();
+ *         break;
+ *       }
+ *   }
+ * \endcode
+ */
 void InstallMsgHandler(MsgHandlerType m);
-
+/*! @} */
 }
 #endif
